Closed Bug 778181 Opened 12 years ago Closed 12 years ago

async protocol proxy service fails to record resolve flags

Categories

(Core :: Networking, defect)

16 Branch
x86_64
Linux
defect
Not set
normal

Tracking

()

RESOLVED FIXED
mozilla17

People

(Reporter: mcmanus, Assigned: mcmanus)

References

Details

Attachments

(1 file)

The returned Proxy info from nsIProtocolProxyService contains the flags used to perform the proxy resolution. The async version of that resolution wasn't recording the flags correctly.

We almost never actually use the async resolution (which I'm fixing in another bug) and the only thing the flags are really important to are websockets. so it doesn't seem to be a problem for any in-tree code, but its a problem for the code I'm writing.
Attached patch patch 0Splinter Review
Assignee: nobody → mcmanus
Status: NEW → ASSIGNED
Attachment #646613 - Flags: review?(cbiesinger)
Blocks: 778201
Comment on attachment 646613 [details] [diff] [review]
patch 0

heh. "oops"
Attachment #646613 - Flags: review?(cbiesinger) → review+
https://hg.mozilla.org/mozilla-central/rev/7f7ccabe2e5d
Status: ASSIGNED → RESOLVED
Closed: 12 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla17
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: