bug 778181 - fix resolve flags for nsiprotocolproxyservice::asyncresolve() r=biesi